<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicationTrackerActivity">

    <TextView
        android:id="@+id/date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/elsie"
        android:text="@string/set_the_date"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="353dp"
        android:layout_height="363dp"
        android:layout_marginBottom="184dp"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addMedication"
        android:layout_width="148dp"
        android:layout_height="58dp"
        android:background="@drawable/button_elderberryplant"
        android:fontFamily="@font/elsie"
        android:text="@string/add_medication"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewMedications"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/viewMedications"
        android:layout_width="164dp"
        android:layout_height="58dp"
        android:background="@drawable/button_elderberryplant"
        android:fontFamily="@font/elsie"
        android:text="@string/view_medications"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addMedication"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />


</androidx.constraintlayout.widget.ConstraintLayout>