<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/elderberryplant"
        android:backgroundTint="#80FFFFFF"
        android:backgroundTintMode="src_over"
        android:fontFamily="@font/bellota_bold"
        android:paddingVertical="50dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="341dp"
        android:layout_height="113dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text"
        app:helperText="Required*"
        app:helperTextTextColor="@color/textHintColor"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout9"
        app:layout_constraintEnd_toStartOf="@+id/emailMic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_bold"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:textColor="@color/main"
            android:textColorHint="@color/main"
            android:textSize="30sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/emailMic"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/microphone_icon"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout8"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="339dp"
        android:layout_height="114dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:helperText="Required*"
        app:helperTextTextColor="@color/textHintColor"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toStartOf="@+id/passwordMic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/main">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="40"
            android:textColor="@color/main"
            android:textColorHint="@color/main"
            android:textSize="30sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/passwordMic"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/microphone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout9"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_elderberryplant"
        android:fontFamily="@font/bellota_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bellota_bold"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/createAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bellota_bold"
        android:text="@string/no_account_yet_create_an_account"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>